[package]
name = "xneo"
version = "0.2.0"
edition = "2021"
description = "A smarter cd command with memory and intelligence"
license = "MIT"
repository = "https://github.com/Rkorona/xneo"
keywords = ["cli", "directory", "navigation", "cd", "terminal"]
categories = ["command-line-utilities"]


[dependencies]
anyhow = "1.0.100"
dirs = "6"
clap = { version = "4.5.49", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
shellexpand = "3.1.1"
home = "0.5.11"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
regex = "1.12"
fuzzy-matcher = "0.3"
colored = "2.2"
indicatif = "0.17"
globset = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
